[package]
name = "res_type_rant"
version = "0.1.0"
authors = ["Pawel Grzech <pgrzech1@bloomberg.net>"]
edition = "2018"
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.4"
#rand = { version = "0.5" }
#getrandom = { version = "0.3", features = ["wasm_js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'HtmlImageElement', 'Window', 'Crypto']

[dependencies.js-sys]
version = "0.3.77"

[dependencies.web-time]
version = "1.1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
